--- a/requirements.txt
+++ b/requirements.txt
@@ -3,15 +3,23 @@ attrs==22.2.0
 certifi==2022.12.7
 click==8.1.3
 coverage==7.2.2
+dnspython==2.3.0
+email-validator==2.0.0.post2
+fastapi==0.95.2
 greenlet==2.0.2
 h11==0.14.0
 httpcore==0.17.0
+httptools==0.5.0
 httpx==0.24.0
 idna==3.4
 iniconfig==2.0.0
+itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.2
+mypy==1.2.0
+mypy-extensions==1.0.0
 nodeenv==1.7.0
+orjson==3.8.13
 packaging==23.0
 pluggy==1.0.0
 prisma==0.8.2
@@ -19,7 +27,15 @@ pydantic==1.10.7
 pytest==7.2.2
 pytest-cov==4.0.0
 python-dotenv==1.0.0
+python-multipart==0.0.6
+PyYAML==6.0
 sniffio==1.3.0
 SQLAlchemy==2.0.9
+starlette==0.27.0
 tomlkit==0.11.7
 typing_extensions==4.5.0
+ujson==5.7.0
+uvicorn==0.22.0
+uvloop==0.17.0
+watchfiles==0.19.0
+websockets==11.0.3
